@@ -3,6 +3,7 @@
 -Upgraded the paint support for infected mosses.
 -File organization
 -Fixed duplicate vertebrae --> leather recipe when used with Calamity mod.
+-Removed the use of reflection from SpiritMod pureglow compability. It should make it significantly less performance-consuming.
 
 0.7.4.2
 =======
